--- a/TestHero/ClientApp/src/Pages/RegistroProfesor/registroProfesor.module.css
+++ b/TestHero/ClientApp/src/Pages/RegistroProfesor/registroProfesor.module.css
@@ -120,7 +120,8 @@
 }
 
 .errorMessage {
+  font-size: 20px;
+  font-weight: bold;
   color: #fd4d4d;
-  font-size: 23px;
-  text-align: center;
+  margin-top: 20px;
 }
