--- a/TestHero/ClientApp/src/Pages/loginalumno/loginalumno.module.css
+++ b/TestHero/ClientApp/src/Pages/loginalumno/loginalumno.module.css
@@ -118,10 +118,12 @@
   top: 1.8vw;
   left: 2.8vw;
   width: 6vw !important;
+  color:#ebebeb;
 }
 
 .BackArrow:hover {
   cursor: pointer;
+  color:rgb(207, 207, 207);
 }
 .textoRegistrate {
   font-size: 25px;
